# ping-stat

./: CMakeLists.txt  HostChecker.cpp  HostChecker.h  LICENSE  Logger.cpp  MainWindow.h  MainWindow.ui  PingStat.pro  README.md  StatsDisplayWidget.cpp  StatsDisplayWidget.h  StatsDisplayWidget.ui  sonar-project.properties
.github/workflows/: buld-and-test.yml  codeql.yml
src/: Constants.cpp  Constants.h  HostChecker.cpp  HostChecker.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Parser.cpp  Parser.h  PingData.h  Pinger.cpp  Pinger.h  PingerLinux.cpp  PingerLinux.h  PingerWindows.cpp  PingerWindows.h  PlotWidget.cpp  PlotWidget.h  StatsDisplayWidget.cpp  StatsDisplayWidget.h  main.cpp
test/: CMakeLists.txt  ParserTest.cpp  ParserTest.h  Test.cpp  Test.h
tests/: CMakeLists.txt  ParserTest.cpp  ParserTest.h
